fix: not-fully visible stamp bug

--- a/Main/styles/quiz/_result_box.scss
+++ b/Main/styles/quiz/_result_box.scss
@@ -191,6 +191,7 @@
                     height: 41px;
 
                     background-image: url(../assets/stamp.png);
+                    background-size: contain;
                 }
             }
         }
